# bank_operations_widget

./: .env.example  .falke8  README.md  main.py  pyproject.toml
src/: data_loader.py  decorators.py  external_api.py  generators.py  main.py  masks.py  operations.py  processing.py  readers.py  reports.py  services.py  utils.py  views.py  widget.py
tests/: test_coverage.py  test_data_loader.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_operations.py  test_processing.py  test_readers.py  test_reports.py  test_services.py  test_utils.py  test_views.py  test_widget.py
